# ggpk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: cli.rs  ggpk.rs
src/: file.rs  ggpk.rs  lib.rs  main.rs  util.rs  version.rs
src/shared/: mod.rs
