[package]
name = "ggpk"
version = "1.0.0"
authors = ["Daniel Dimovski <daniel.k.dimovski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
byteorder = "1.3.4"
base64 = "0.13.0"
log = "0.4.11"
simplelog = "0.8.0"
clap = "2.33.3"
rayon = "1.5.0"
