[package]
name = "ggpk"
version = "1.2.0"
authors = ["Daniel Dimovski <daniel@timecode.se>"]
edition = "2018"
description = "Library for GGPK container format used by the game Path of Exile"
repository = "https://github.com/ex-nihil/ggpk"
license = "LGPL-3.0-only"

[dependencies]
memmap = "0.7.0"
byteorder = "1.3.4"
log = "0.4.11"
rayon = "1.5.0"
widestring = "0.4.3"

[dev-dependencies]
clap = "2.33.3"
simplelog = "0.8.0"
regex = "1"