[package]
name = "ggpk"
version = "1.2.2"
authors = ["Daniel Dimovski <daniel@timeloop.se>"]
edition = "2021"
description = "Library for GGPK container format used by the game Path of Exile"
repository = "https://github.com/ex-nihil/ggpk"
license = "LGPL-3.0-only"

[dependencies]
memmap = "0.7.0"
byteorder = "1.4.3"
log = "0.4.17"
rayon = "1.5.3"
widestring = "1.0.2"

[dev-dependencies]
clap = "2.34.0"
simplelog = "0.12.0"
regex = "1.6.0"
